--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,38 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    color: #ffffff;
+}
+
 .button-container {
+    margin: 0 auto;
     width: 500px;
     height: 500px;
+    padding: 20px;
+    margin-top: 100px;
 }
 
 .button {
     display: inline-block;
     width: 200px;
     height: 200px;
+    margin: 20px;
     border: 1px solid #000;
+    border-radius:50px;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.button-glow {
+    background:#ef5d22;
+    box-shadow: 0 0 20px #fff;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 #red {
@@ -24,4 +49,9 @@
 
 #yellow {
     background-color: yellow;
+}
+
+.blacken {
+    background-color: #000;
+    border: 5px solid #fff;
 }
